--- a/src/_includes/partials/cookie-consent.html
+++ b/src/_includes/partials/cookie-consent.html
@@ -14,7 +14,7 @@
     <div
       class="z-50 max-w-screen-lg mx-auto fixed bg-white inset-x-5 p-5 bottom-1/4 drop-shadow-2xl flex gap-4 flex-wrap md:flex-nowrap text-center md:text-left items-center justify-center md:justify-between border-solid border border-gray-200">
       <div class="w-full">
-        This website uses cookies to ensure you get the best experience on our website. Learn more in our
+        This website uses cookies to ensure you get the best experience on my website. Learn more in my
         <a
           href="/privacy-policy/"
           class="text-[color:var(--primary-color)] whitespace-nowrap hover:underline">
